# user story 1 - 6 UI issues fixes for loading launches and table alignment

--- a/src/main/resources/static/css/launchstyle.css
+++ b/src/main/resources/static/css/launchstyle.css
@@ -1523,7 +1523,7 @@ width:82px!important;
 }
 .tme-label-align {
     float: left;
-    width: 35%;
+    width: 39%;
     padding-top: 6px;
 }
 .tme-select-align {
